add latlon for each point of tour
added states, niece and liberty island nodes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@ text {
 			var w = 1000;
 			var h = 1000;
 
+			var sf = [-78.1764583, 41.3553519],
+    ny = [-74.0064, 40.7142];
+    li = [-74.0443671, 40.6890735];
+
+
 			var projection = d3.geo.albersUsa()
                        .translate([w/2, h/2]);
 			//Define default path generator
