--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+.background {
+  fill: none;
+  pointer-events: all;
+}
 
+#states {
+  fill: #aaa;
+}
+
+#states .active {
+  fill: blue;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
 .state {
   fill: #b8b8b8;
   stroke: #fff;
-  stroke-width: .5px;
+  stroke-width: 1.5px;
   stroke-linejoin: round;
+    pointer-events: fill;
+
 }
 
 .flu {
-	fill: orange;
+	fill: blue;
 }
 
 button {
@@ -39,8 +61,9 @@ text {
 <script type="text/javascript">
 
 			//Width and height
-			var width = 1000;
-			var height = 500;
+			var width = 1000,
+			     height = 500,
+            centered;
 
 			var sf = [-78.1764583, 41.3553519],
     			ny = [-74.0064, 40.7142];
@@ -55,31 +78,38 @@ text {
     			.on("zoom", zoomed);
 
 			var projection = d3.geo.albersUsa()
-                 .translate([width/2, height/2]);
+          .translate([width/2, height/2]);
+
 
 			//Create SVG element
 			var svg = d3.select("body")
-				.append("svg")
-				.attr("width", width)
-				.attr("height", height)
-				.append("g");
-
+			     .append("svg")
+				  .attr("width", width)
+				  .attr("height", height)
+				  .append("g");
+    var g = svg.append("g");
+    
+    svg.append("rect")
+          .attr("class", "background")
+          .attr("width", width)
+          .attr("height", height)
+          .on("click", clicked);
 
 			//Define default path generator
 			var path = d3.geo.path()
-                .projection(projection);
+          .projection(projection);
 
 			//Load in GeoJSON data
-			d3.json("data/us-statesLATLON.json", function(error, json) {
+			d3.json("http://linepointpath.cartodb.com/api/v2/sql?format=GeoJSON&q=SSELECT ST_MakePolygon(ST_ExteriorRing(ST_union(ST_Simplify(GEOM,0.5))))
+FROM graphstates GROUP BY region_big", function(error, json) {
 				//Bind data and create one path per GeoJSON feature
 				svg.selectAll("path")
 				   .data(json.features)
 				   .enter().append("path")
 				   .attr("class", "state")
 				   .attr("d", path)
-    			   .attr("class", "state")
     			   .style("fill", function(d){
-						var NAME = d.properties.NAME;
+						var NAME = d.properties.name;
 						if (NAME == "New York") {
 							return "orange";
     					}else if (NAME == "West Virginia") 
@@ -103,28 +133,56 @@ text {
     					}else {
     						return "#ccc";
     					}
-						});
+
+						})
+             .on("click", clicked);
 
 
     });
 
+
+      // Click zoom code
+      function clicked(d) {
+      // If the click was on the centered state or the background, re-center
+      // Otherwise, center the clicked-on state.
+      if (!d || centered === d) {
+        projection.translate([width / 2, height / 2]);
+        centered = null;
+      } else {
+        var centroid = path.centroid(d),
+        translate = projection.translate();
+          projection.translate([
+          translate[0] - centroid[0] + width / 2,
+          translate[1] - centroid[1] + height / 2
+         ]);
+          centered = d;
+          }
+
+     // Transition to the new projection.
+        g.selectAll("path").transition()
+          .duration(750)
+          .attr("d", path);
+          }
+            // end click zoom code
+
+      //jump zoom code
 			function zoomTo(location, scale) {
-  				var point = projection(location);
-  				return zoom
+  				  var point = projection(location);
+  				  return zoom
       			.translate([width / 2 - point[0] * scale, height / 2 - point[1] * scale])
       			.scale(scale);
 				}
 
 			function zoomed(d) {
-  				translate = zoom.translate();
-  				scale = zoom.scale();
-  				visibleArea = 1 / scale / scale;
-  				invisibleArea = 200 * visibleArea;
-  				context.clearRect(0,0,width,height);
-  				context.beginPath();
-  				path(d);
-  				context.stroke();
-				}
+  				  translate = zoom.translate();
+  				  scale = zoom.scale();
+  				  visibleArea = 1 / scale / scale;
+  				  invisibleArea = 200 * visibleArea;
+  				  context.clearRect(0,0,width,height);
+  				  context.beginPath();
+  				  path(d);
+  				  context.stroke();
+				      }
 
 			function jump() {
   				var t = d3.select(this);
@@ -136,8 +194,10 @@ text {
       			.transition()
         		.call(zoomTo(sf, 1).event)
             	.each("end", repeat);
-  })();
-}		
+          })();
+      }		
+          // end jump zoom code
+
 		</script>
-		<button id = "One">BLUE</button>
+	
            </body>
