slimming of code
Cleaned up file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
 <style type="text/css">
 canvas{
  color: 'blue';
@@ -41,7 +40,7 @@ var projection = d3.geo.mercator()
 
  var canvas = d3.select("body").append("canvas")
     .attr("width", width)
-  .attr("height", height);
+    .attr("height", height);
 
 var svg = d3.select("body")
             .append("svg")
@@ -57,10 +56,9 @@ var path = d3.geo.path()
 d3.json("http://linepointpath.cartodb.com/api/v2/sql?format=GeoJSON&q=SELECT * FROM GRAPHstates", function(error, json) {
   console.log(json)
   canvas
-  svg.selectAll("path")
-    console.log(json)
-
-      .data(json.features)
+      svg.selectAll("path")
+      console.log(json)
+      //.datum(json.feature)
       .enter().append("path")
       .attr("class", "state")
            .attr("d", path)
