--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -210,7 +210,6 @@ Nationally during this 11 year period, the risk of death by firearm was 10.21 pe
 ```
 - center: [39.0, -101.5]
 - zoom: 6
-
 ```
 
 Deaths varied by state with the lowest number of deaths being 3.02 per 100,000 in Hawaii and the highest number of deaths being 18.62 per 100,000 in Louisiana. 
@@ -219,7 +218,8 @@ Deaths varied by state with the lowest number of deaths being 3.02 per 100,000 i
 #States Higher than National Average
 ```
 - center: [39.0, -101.5]
-- zoom: 5```
+- zoom: 5
+```
 
 Overall 30 states and Washington DC had rates higher than the national average.
 
