--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -197,7 +197,7 @@ Between 2000 and 2010, 335,609 people died from gun related deaths in the United
 
 #National Average
 
-![National Avg Graph](img/us.png)
+![National Avg Graph](img/USmap-01.png)
 
 Nationally during this 11 year period, the risk of death by firearm was 10.21 per 100,000 people meaning approximately 10 people out of every 100,000 in the US died by a gun.
 
