--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -202,38 +202,50 @@ Nationally during this 11 year period, the risk of death by firearm was 10.21 pe
 
 #Lowest and Highest
 
+![National Avg Graph](img/USmap-01.png)
 
 Deaths varied by state with the lowest number of deaths being 3.02 per 100,000 in Hawaii and the highest number of deaths being 18.62 per 100,000 in Louisiana. 
 
 
 #States Higher than National Average
 
-![Mexican Paradox Graph](img/us.png)
+![National Avg Graph](img/USmap-01.png)
 
 Overall 30 states and Washington DC had rates higher than the national average.
 
 
 #Not Much Change
 
+![National Avg Graph](img/USmap-01.png)
 
 41 of the states didn’t change much from 2000-2010. 
 
 
 # Death Rate by Race
 
+![National Avg Graph](img/USmap-01.png)
+
 The national average rate of death by gun for African Americans was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, African Americans were almost twice more likely to die by a gun than Caucasians.)
 
 
 # Death Rate by Ethnicity
+
+![National Avg Graph](img/USmap-01.png)
 
 The national average rate of death by gun for Hispanics was 7.13 per 100,000 people and for non-Hispanics was 10.13 per 100,000. (Nationally, non-Hispanics were more likely to die by a gun than Hispanics.)
 
 
 # States with Gun Death Decreases
 
+![National Avg Graph](img/USmap-01.png)
+
 Seven states and Washington DC saw their rate of gun deaths decrease over this 11 year period, California, North Carolina, Arizona, Nevada, New York, Illinois, and Maryland. In those states fewer deaths of Hispanics and African-Americans drove the fall.
 
 # Homicides and Suicides Nationally
+
+![National Avg Graph](img/USmap-01.png)
+
+![National Avg Graph](img/USmap-01.png)
 
 Nationally the rates of firearm related deaths classified as homicides (4.1 per 100,000) and suicides (5.8 per 100,000) remained constant during this time but varied between states.
 
