--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -194,46 +194,51 @@ title: "Gun Deaths, State by State"
 Between 2000 and 2010, 335,609 people died from gun related deaths in the United States. Researchers looked at data from the Web-based Injury Statistics Query and Reporting System to identify the trends in race (Caucasian, African-American or other), ethnicity (Hispanic or non-Hispanic) and intent (homicide, suicide, undetermined or unintentional). Here is what they found.
 
 
-#National Average
+#Gun Death Rates Overall, by State
 
 ![National Avg Graph](img/USmap-01.png)
 
 Nationally during this 11 year period, the risk of death by firearm was 10.21 per 100,000 people meaning approximately 10 people out of every 100,000 in the US died by a gun.
 
-#Lowest and Highest
+#States with Lowest and Highest Gun Death Rates
 
 ![National Avg Graph](img/USmap-01.png)
 
 Deaths varied by state with the lowest number of deaths being 3.02 per 100,000 in Hawaii and the highest number of deaths being 18.62 per 100,000 in Louisiana. 
 
 
-#States Higher than National Average
+#States with Gun Death Risk higher than the National Risk
 
 ![National Avg Graph](img/USmap-01.png)
 
 Overall 30 states and Washington DC had rates higher than the national average.
 
 
-#Not Much Change
+#States with little change over the 11 year period
 
 ![National Avg Graph](img/USmap-01.png)
 
 41 of the states didn’t change much from 2000-2010. 
 
 
-# Death Rate by Race
+#Gun Death Rates for Blacks, by State
 
 ![National Avg Graph](img/USmap-01.png)
 
 The national average rate of death by gun for African Americans was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, African Americans were almost twice more likely to die by a gun than Caucasians.)
 
 
-# Death Rate by Ethnicity
+#Gun Death Rates for Hispanics, by State
 
 ![National Avg Graph](img/USmap-01.png)
 
 The national average rate of death by gun for Hispanics was 7.13 per 100,000 people and for non-Hispanics was 10.13 per 100,000. (Nationally, non-Hispanics were more likely to die by a gun than Hispanics.)
 
+# States with Gun Death Increases
+
+![National Avg Graph](img/USmap-01.png)
+
+Two states saw their rate of gun deaths increase over this 11 year period, Florida and Massachusetts. In those states, the deaths of Caucasians and Non-Hispanics were responsible for the increase.
 
 # States with Gun Death Decreases
 
@@ -241,7 +246,7 @@ The national average rate of death by gun for Hispanics was 7.13 per 100,000 peo
 
 Seven states and Washington DC saw their rate of gun deaths decrease over this 11 year period, California, North Carolina, Arizona, Nevada, New York, Illinois, and Maryland. In those states fewer deaths of Hispanics and African-Americans drove the fall.
 
-# Homicides and Suicides Nationally
+# Rates of Homicides and Suicides, by State
 
 ![National Avg Graph](img/USmap-01.png)
 
