--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -225,7 +225,7 @@ Overall 30 states and Washington DC had rates higher than the national average.
 
 ![National Avg Graph](img/USmap-01.png)
 
-The national average rate of death by gun for African Americans was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, African Americans were almost twice more likely to die by a gun than Caucasians.)
+The national average rate of death by gun for Blacks was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, Blacks were almost twice more likely to die by a gun than Caucasians.)
 
 
 #Gun Death Rates for Hispanics, by State
