--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -221,11 +221,11 @@ Overall 30 states and Washington DC had rates higher than the national average.
 41 of the states didn’t change much from 2000-2010. 
 
 
-#Gun Death Rates for Blacks, by State
+#Gun Death Rates for African Americans, by State
 
 ![National Avg Graph](img/USmap-01.png)
 
-The national average rate of death by gun for Blacks was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, Blacks were almost twice more likely to die by a gun than Caucasians.)
+The national average rate of death by gun for African Americans was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, African Americans were almost twice more likely to die by a gun than Caucasians.)
 
 
 #Gun Death Rates for Hispanics, by State
@@ -258,11 +258,11 @@ Nationally the rates of firearm related deaths classified as homicides (4.1 per 
 
 While the rate of national firearm deaths remained stable during 2000– 2010, there was significant variation at the state level.
 
-Gun related deaths were twice as high in African-Americans than Caucasians but decreased among Hispanics.
+Gun related deaths were twice as high in African Americans than Caucasians but decreased among Hispanics.
 
 Efforts to identify state-specific best practices can contribute to changes in national firearm fatality rates that remain high. This calls for specific studies to identify the drivers of the state-specific trends followed by introducing tailored programmes that target specific racial and ethnic groups in specific states.
 
-# Strength and LImitations of this Study
+# Strength and Limitations of this Study
 
 ▪ This study uses the best available data of firearm mortality in the USA.
 
