--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -196,61 +196,61 @@ Between 2000 and 2010, 335,609 people died from gun related deaths in the United
 
 #Gun Death Rates Overall, by State
 
-![National Avg Graph](img/USmap-01.png)
+![National Avg Graph](img/nationaloverall.png)
 
 Nationally during this 11 year period, the risk of death by firearm was 10.21 per 100,000 people meaning approximately 10 people out of every 100,000 in the US died by a gun.
 
 #States with Lowest and Highest Gun Death Rates
 
-![National Avg Graph](img/USmap-01.png)
+![Lowest Highest](img/highlow.png)
 
 Deaths varied by state with the lowest number of deaths being 3.02 per 100,000 in Hawaii and the highest number of deaths being 18.62 per 100,000 in Louisiana. 
 
 
 #States with Gun Death Risk higher than the National Risk
 
-![National Avg Graph](img/USmap-01.png)
+![Higher than Average](img/aboveaverage.png)
 
 Overall 30 states and Washington DC had rates higher than the national average.
 
 
 #States with little change over the 11 year period
 
-![National Avg Graph](img/USmap-01.png)
+![Little Change](img/notmuchchange.png)
 
 41 of the states didn’t change much from 2000-2010. 
 
 
 #Gun Death Rates for African Americans, by State
 
-![National Avg Graph](img/USmap-01.png)
+![African Americans](img/blacks.png)
 
 The national average rate of death by gun for African Americans was 18.51 per 100,000 people and for Caucasians was 9.05 per 100,000. (Nationally, African Americans were almost twice more likely to die by a gun than Caucasians.)
 
 
 #Gun Death Rates for Hispanics, by State
 
-![National Avg Graph](img/USmap-01.png)
+![Hispanics](img/hispanics.png)
 
 The national average rate of death by gun for Hispanics was 7.13 per 100,000 people and for non-Hispanics was 10.13 per 100,000. (Nationally, non-Hispanics were more likely to die by a gun than Hispanics.)
 
 # States with Gun Death Increases
 
-![National Avg Graph](img/USmap-01.png)
+![Increases](img/increases.png)
 
 Two states saw their rate of gun deaths increase over this 11 year period, Florida and Massachusetts. In those states, the deaths of Caucasians and Non-Hispanics were responsible for the increase.
 
 # States with Gun Death Decreases
 
-![National Avg Graph](img/USmap-01.png)
+![Decreases](img/decreases.png)
 
 Seven states and Washington DC saw their rate of gun deaths decrease over this 11 year period, California, North Carolina, Arizona, Nevada, New York, Illinois, and Maryland. In those states fewer deaths of Hispanics and African-Americans drove the fall.
 
 # Rates of Homicides and Suicides, by State
 
-![National Avg Graph](img/USmap-01.png)
+![Homicides](img/homicides.png)
 
-![National Avg Graph](img/USmap-01.png)
+![Suicides](img/suicides.png)
 
 Nationally the rates of firearm related deaths classified as homicides (4.1 per 100,000) and suicides (5.8 per 100,000) remained constant during this time but varied between states.
 
