--- a/gunDeaths.html
+++ b/gunDeaths.html
@@ -244,15 +244,19 @@ Two states saw their rate of gun deaths increase over this 11 year period, Flori
 
 ![Decreases](img/decreases.png)
 
-Seven states and Washington DC saw their rate of gun deaths decrease over this 11 year period, California, North Carolina, Arizona, Nevada, New York, Illinois, and Maryland. In those states fewer deaths of Hispanics and African-Americans drove the fall.
+Seven states and Washington DC saw their rate of gun deaths decrease over this 11 year period, California, North Carolina, Arizona, Nevada, New York, Illinois, and Maryland. In those states, fewer deaths of Hispanics and African Americans drove the fall.
 
-# Rates of Homicides and Suicides, by State
+# Rates of Homicides, by State
 
 ![Homicides](img/homicides.png)
 
+Nationally the rates of firearm related deaths classified as homicides (4.1 per 100,000) remained constant during this time but varied between states.
+
+# Rates of Suicides, by State
+
 ![Suicides](img/suicides.png)
 
-Nationally the rates of firearm related deaths classified as homicides (4.1 per 100,000) and suicides (5.8 per 100,000) remained constant during this time but varied between states.
+Nationally the rates of firearm related deaths classified as suicides (5.8 per 100,000) remained constant during this time but varied between states.
 
 # Conclusions
 
